  53.   [bug]      zhanglikun
	bin/bindctl: Generate a unique session ID by using 
	socket.gethostname() instead of socket.gethostbyname(), 
	since the latter one could make bindctl	stall if its own 
	host name can't be resolved.
	(Trac #228, svn r2096)

  52.   [func]      zhanglikun
	bin/xfrout: When xfrout is launched, check whether the
	socket file is being used by one running xfrout process, 
	if it is, exit from python.	If the file isn't a socket file 
	or nobody is listening, it will be removed. If it can't 
	be removed, exit from python.
	(Trac #151, svn r2091)

bind10-devel-20100602 released on June 2, 2010

  51.   [build]         jelte
	lib/python: Add bind10_config.py module for paths and
	possibly other configure-time variables. Allow some components
	to find spec files in build tree when ran from source.
	(Trac #223)

  50.	[bug]		zhanglikun
	bin/xfrin: a regression in xfrin: it can't communicate with 
	a remote server. (Trac #218, svn r2038)

  49.	[func]*		jelte
	Use unix domain sockets for msgq. (Trac #183, svn r2009)

  48.	[func]		jelte
	bin/auth: Use asio's io_service for the msgq handling.
	(svn r2007)

  47.	[func]		zhanglikun
	bin/cmdctl: Add value/type check for commands sent to
	cmdctl. (Trac #201, svn r1959)

  46.	[func]		zhanglikun
	lib/cc: Fix real type data encoding/decoding. (Trac #193,
	svn r1959)

  45.	[func]		zhanglikun
	bin/bind10: Pass verbose option to more modules. (Trac
	#205, svn r1957)

  44.   [build]         jreed
	Install headers for libdns and libexception.  (Trac #68,
	svn r1941)

  43.   [func]          jelte
	lib/cc: Message queuing on cc channel. (Trac #58, svn r1870)

  42.   [func]          jelte
	lib/python/isc/config:      Make temporary file with python
	tempfile module instead of manual with fixed name.  (Trac
	#184, svn r1859)

  41.   [func]          jelte
	Module descriptions in spec files. (Trac #90, svn r1856)

  40.   [build]         jreed
	Report detected features and configure settings at end of